--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue-loader": "^17.0.1",
+        "@vue/compiler-sfc": "^3.1.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
-        "vue": "^3.2.36",
-        "vue3-google-map": "^0.15.0"
+        "bootstrap": "^5.2.3",
+        "bootstrap-vue": "^2.23.1",
+        "vue": "^3.2.47",
+        "vue3-google-map": "^0.15.0",
+        "@vue/compat": "^3.1.0"
     }
 }
